# dotent-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: asset.rs  entry.rs  error.rs  lib.rs  util.rs
src/project/: common.rs  function.rs  interface.rs  message.rs  mod.rs  scene.rs  script.rs  variable.rs
src/project/object/: mod.rs  sprite.rs
tests/: read_ent_file.rs
tests/data/: project.ent  project.json  project2.json
