[package]
name = "dotent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.38"
thiserror = "1.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
