[package]
name = "dotent"
version = "0.2.2"
edition = "2021"
description = "A crate for handling Entry File(.ent)."
license = "MIT"
repository = "https://github.com/jedeop/dotent-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.38"
thiserror = "1.0"
